--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -25,7 +25,7 @@
       <li>get a gift</li>
       <li>pay bills</li>
     </ul>
-    <button>Click me</button>
+    <button>add new todo</button>
     <script src="app.js"></script>
   </body>
 </html>
