--- a/form-events/index.html
+++ b/form-events/index.html
@@ -5,9 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <style>
+      body {
+        background: #eee;
+      }
+      form {
+        max-width: 200px;
+        margin: 40px auto;
+        background: white;
+        padding: 10px;
+      }
+      input {
+        display: block;
+        margin: 10px auto;
+        padding: 4px;
+      }
+      *:focus {
+        outline: none;
+      }
+      .success {
+        border: 2px solid limegreen;
+      }
+      .error {
+        border: 2px solid crimson;
+        color: crimson;
+      }
+    </style>
   </head>
   <body>
-    <button>click me</button>
+    <form class="signup-form">
+      <input type="text" name="username" placeholder="username" />
+      <small class="feedback"></small>
+      <input type="submit" value="submit" />
+    </form>
 
     <script src="app.js"></script>
   </body>
